feat: Mejoras en tests, validación batch y despliegue actualizado - Agregada validación de límite 100 productos en batch - Mejorados tests unitarios y de integración - Actualizada cobertura de código con JaCoCo - Despliegue exitoso en Google Cloud Run (revisión productos-00019-jsj) - README actualizado con fecha del último despliegue